update product in store
